added internal routes m0-m1-AI
